--- a/template/interface_header.njk
+++ b/template/interface_header.njk
@@ -35,11 +35,11 @@ class {{name}}Bridge : public Napi::ObjectWrap<{{name}}Bridge> {
   {% if member.member_type == "operation" %}
   Napi::Value {{member.name | camelcase-}}(const Napi::CallbackInfo& info);
   {% elif member.member_type == "attribute" %}
-  Napi::Value Get{{member.name| camelcase-}}(const Napi::CallbackInfo& info);
+  Napi::Value Getter{{member.name| camelcase-}}(const Napi::CallbackInfo& info);
   {% if member.is_static %}
   static
   {% endif -%}
-  void (Set{{member.name | camelcase-}})(const Napi::CallbackInfo& info, const Napi::Value& value);
+  void (Setter{{member.name | camelcase-}})(const Napi::CallbackInfo& info, const Napi::Value& value);
   {% endif %}
   {% endfor %}
 
